fixed spacing

--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ body {
     margin-bottom: 10px;
   }
   .feature-desc {
-      margin-bottom: 5px;
+      margin-bottom: 20px;
       margin-top: 7px;
   }
   .feature-footer {
